--- a/index.html
+++ b/index.html
@@ -5,53 +5,108 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
-
-    <title>News homepage</title>
+    <link rel="stylesheet" href="style.css">
+    <title>Web | News homepage</title>
   </head>
 
   <body>
+    <header>
+      <div class="logo-img">
+        <img src="./assets/images/logo.svg" alt="homepage logo">
+      </div>
+      <nav id="nav-content">
+        <ul class="nav-links">
+          <li><a href="#">Home</a></li>
+          <li><a href="#">New</a></li>
+          <li><a href="#">Popular</a></li>
+          <li><a href="#">Trending</a></li>
+          <li><a href="#">Categories</a></li>
+        </ul>
+      </nav>
+    </header>
+    <main>
+      <section id="future-content">
+        <section class="future-box">
+          <div class="desktop-img">
+            <img src="./assets/images/image-web-3-desktop.jpg" alt="web-3 desktop">
+          </div>
+          <div class="every">
 
-    Home
-    New
-    Popular
-    Trending
-    Categories
+            <div class="future">
+              <h1>
+                The Bright Future of Web 3.0?
+              </h1>
+            </div>
+            <div class="evolution">
+              <p>
+                We dive into the next evolution of the web that claims to put the power of the platforms back into the
+                hands
+                of the
+                people.
+                But is it really fulfilling its promise?
+              </p>
+              <a class="btn" href=""> Read more</a>
+            </div>
+          </div>
+        </section>
+        <aside>
+          <ul class="news-content">
+            <h2>New</h2>
+            <li>
+              <h3><a href="">Hydrogen VS Electric Cars</a> </h3>
+              <p>Will hydrogen-fueled cars ever catch up to EVs?</p>
+            </li>
+            <li>
+              <h3><a href="">The Downsides of AI Artistry</a> </h3>
+              <p>What are the possible adverse effects of on-demand AI image generation?</p>
+            </li>
+            <li>
+              <h3><a href="">Is VC Funding Drying Up?</a></h3>
+              <p>Private funding by VC firms is down 50% YOY. We take a look at what that means.</p>
+            </li>
+          </ul>
+        </aside>
+      </section>
+      <ul id="other-content">
+        <li>
+          <div>
+            <img src="/assets/images/image-retro-pcs.jpg" alt="Retro-pcs">
+          </div>
+          <div>
+            <h2>01</h2>
+            <h3><a href="">Reviving Retro PCs</a></h3>
+            <p>What happens when old PCs are given modern upgrades?</p>
+          </div>
+        </li>
+        <li>
+          <div>
+            <img src="/assets/images/image-top-laptops.jpg" alt="top-laptops">
+          </div>
+          <div>
+            <h2>02</h2>
+            <h3><a href="">Top 10 Laptops of 2022</a></h3>
+            <p>Our best picks for various needs and budgets</p>
+          </div>
+        </li>
 
-    The Bright Future of Web 3.0?
-
-    We dive into the next evolution of the web that claims to put the power of the platforms back into the hands of the
-    people.
-    But is it really fulfilling its promise?
-
-    Read more
-
-    New
-
-    Hydrogen VS Electric Cars
-    Will hydrogen-fueled cars ever catch up to EVs?
-
-    The Downsides of AI Artistry
-    What are the possible adverse effects of on-demand AI image generation?
-
-    Is VC Funding Drying Up?
-    Private funding by VC firms is down 50% YOY. We take a look at what that means.
-
-    01
-    Reviving Retro PCs
-    What happens when old PCs are given modern upgrades?
-
-    02
-    Top 10 Laptops of 2022
-    Our best picks for various needs and budgets.
-
-    03
-    The Growth of Gaming
-    How the pandemic has sparked fresh opportunities.
-
-    <div class="attribution">
-      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
-      Coded by <a href="#">Your Name Here</a>.
-    </div>
+        <li>
+          <div>
+            <img src="/assets/images/image-gaming-growth.jpg" alt="gaming-pad">
+          </div>
+          <div>
+            <h2>03</h2>
+            <h3><a href="">The Growth of Gaming</a></h3>
+            <p>How the pandemic has sparked fresh opportunities.</p>
+          </div>
+        </li>
+      </ul>
+    </main>
+    <footer>
+      <div class="attribution">
+        Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
+        Coded by <a href="https://github.com/adebisiabdussamad">Adebisi Abdussamad A</a>.
+      </div>
+    </footer>
   </body>
 
 </html>
