--- a/index.html
+++ b/index.html
@@ -49,23 +49,23 @@
             </div>
           </div>
         </section>
-        <aside>
-          <ul class="news-content">
-            <h2>New</h2>
-            <li>
-              <h3><a href="">Hydrogen VS Electric Cars</a> </h3>
-              <p>Will hydrogen-fueled cars ever catch up to EVs?</p>
-            </li>
-            <li>
-              <h3><a href="">The Downsides of AI Artistry</a> </h3>
-              <p>What are the possible adverse effects of on-demand AI image generation?</p>
-            </li>
-            <li>
-              <h3><a href="">Is VC Funding Drying Up?</a></h3>
-              <p>Private funding by VC firms is down 50% YOY. We take a look at what that means.</p>
-            </li>
-          </ul>
-        </aside>
+        <!-- <aside> -->
+        <ul class="news-content">
+          <h2>New</h2>
+          <li>
+            <h3><a href="">Hydrogen VS Electric Cars</a> </h3>
+            <p>Will hydrogen-fueled cars ever catch up to EVs?</p>
+          </li>
+          <li>
+            <h3><a href="">The Downsides of AI Artistry</a> </h3>
+            <p>What are the possible adverse effects of on-demand AI image generation?</p>
+          </li>
+          <li>
+            <h3><a href="">Is VC Funding Drying Up?</a></h3>
+            <p>Private funding by VC firms is down 50% YOY. We take a look at what that means.</p>
+          </li>
+        </ul>
+        <!-- </aside> -->
       </section>
       <ul id="other-content">
         <li>
