made the path for my images relative

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
       <ul id="other-content">
         <li>
           <div>
-            <img src="/assets/images/image-retro-pcs.jpg" alt="Retro-pcs">
+            <img src="./assets/images/image-retro-pcs.jpg" alt="Retro-pcs">
           </div>
           <div>
             <h2>01</h2>
@@ -80,7 +80,7 @@
         </li>
         <li>
           <div>
-            <img src="/assets/images/image-top-laptops.jpg" alt="top-laptops">
+            <img src="./assets/images/image-top-laptops.jpg" alt="top-laptops">
           </div>
           <div>
             <h2>02</h2>
@@ -91,7 +91,7 @@
 
         <li>
           <div>
-            <img src="/assets/images/image-gaming-growth.jpg" alt="gaming-pad">
+            <img src="./assets/images/image-gaming-growth.jpg" alt="gaming-pad">
           </div>
           <div>
             <h2>03</h2>
